<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:title="Home"
            android:id="@+id/homepage_menuItem"
            android:icon="@drawable/svg_home_white_24px"/>

        <item
            android:title = "My Registrations"
            android:id="@+id/myRegistrations_menuItem"
            android:icon="@drawable/svg_chat_white_48px"/>

        <item
            android:title="@string/sponsors"
            android:id="@+id/sponsors_menuItem"
            android:icon="@drawable/svg_new_releases_white_48px"/>

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:title="@string/core_team"
            android:id="@+id/core_menuItem"
            android:icon="@drawable/svg_group_work_white_48px"/>

        <item
            android:title="@string/developers"
            android:id="@+id/developers_menuItem"
            android:icon="@drawable/svg_code_white_48px"/>

    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">


        <item
            android:title="Sign Out"
            android:id="@+id/sign_out"
            android:icon="@drawable/svg_group_work_white_48px"/>

    </group>

</menu>
