<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EventDetails"
    tools:showIn="@layout/activity_event_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <!--DESCRIPTION-->
            <android.support.v7.widget.CardView
                android:id="@+id/description_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Description_Card">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_event_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/description"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_marginLeft="8dp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/description_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:autoLink="web"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <!--REGISTRATION-->
            <android.support.v7.widget.CardView
                android:id="@+id/registration_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Description_Card">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/date_venue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:text="Date and Venue"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_marginLeft="8dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:padding="10dp"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:fontFamily="@font/marketdeco"
                            android:text="Date:" />

                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/calender"
                            android:layout_width="30dp"
                            android:layout_height="35dp"
                            android:padding="10dp"
                            android:layout_marginLeft="10dp"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:src="@drawable/calendar"
                            />
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/date"
                            android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="February 15,2019" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v7.widget.AppCompatTextView
                            android:padding="10dp"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:fontFamily="@font/marketdeco"
                            android:text="Venue:" />

                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/map"
                            android:layout_width="20dp"
                            android:layout_height="25dp"
                            android:padding="10dp"
                            android:layout_marginLeft="10dp"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:src="@drawable/location"
                            />
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/venue"
                            android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Cse Department" />

                    </LinearLayout>



                </LinearLayout>
            </android.support.v7.widget.CardView>



            <!--ORGANIZERS-->
            <android.support.v7.widget.CardView
                android:id="@+id/organizers_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Description_Card">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_event_organizers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/organizers"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_marginLeft="8dp" />

                    <!--CONTACT ONE-->

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipChildren="false"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/contact_name_one"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/contact_person_one" />

                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/save_contact_person_one"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="8dp"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:src="@drawable/svg_save_white_48px"
                            android:layout_marginRight="8dp" />

                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/call_contact_person_one"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:src="@drawable/svg_phone_white_24px" />


                    </android.support.v7.widget.LinearLayoutCompat>

                    <!--CONTACT TWO-->

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp">


                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/contact_name_two"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/contact_person_two" />

                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/save_contact_person_two"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="8dp"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:src="@drawable/svg_save_white_48px"
                            android:layout_marginRight="8dp" />

                        <android.support.v7.widget.AppCompatImageButton
                            android:id="@+id/call_contact_person_two"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:src="@drawable/svg_phone_white_24px" />


                    </android.support.v7.widget.LinearLayoutCompat>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/more_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Description_Card">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/reg_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Register"
                        android:textColor="@color/colorPrimary" />



                </LinearLayout>
            </android.support.v7.widget.CardView>




        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

</android.support.v4.widget.NestedScrollView>